--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <h1>Buttons</h1>
         <button onclick="Telegram.WebApp.expand();">Expand Webview</button>
-        <button onclick="toggleMainButton();">Toggle Main Button</button>
+        <button onclick="toggleMainButton();">Open Wallet</button>
     </main>
     <div id="viewport"></div>
     <div id="viewport-params-size"></div>
@@ -103,10 +103,10 @@
 
         // Show main button
         Telegram.WebApp.MainButton.setParams({
-            text: 'Main Button'
+            text: 'Connect Wallet'
         });
         Telegram.WebApp.MainButton.onClick(function () {
-            Telegram.WebApp.showAlert('Main Button was clicked')
+            Telegram.WebApp.showAlert('Connect Wallet')
         });	
         Telegram.WebApp.MainButton.show();
 
