--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         <button onclick="Telegram.WebApp.showAlert('Presale is live!');">Presale</button>
         <button onclick="showPopup();">Real Token</button>
 
-        <h1>Links</h1>
+        <h1>Social</h1>
         <ul>
             <li>
-                <a href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/trendingapps');">Shahnameh News</a>
+                <a href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/shahnameh_news');">Shahnameh News</a>
             </li>
             <li>
-                <a href="javascript:Telegram.WebApp.openLink('https://ton.org/');">Twitter</a>
+                <a href="javascript:Telegram.WebApp.openLink('https:/x.com/shahnamehgamefi/');">Twitter</a>
             </li>
         </ul>
 
@@ -107,8 +107,8 @@
         // Function to call showPopup API
         function showPopup() {
             Telegram.WebApp.showPopup({
-                title: 'Title',
-                message: 'Some message',
+                title: 'Presale',
+                message: 'Buy REAL',
                 buttons: [
                     {id: 'link', type: 'default', text: 'https://shahnameh-ton.w3spaces.com/presale/presale.html'},
                     {type: 'cancel'},
