--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     {type: 'cancel'},
                 ]
             }, function(btn) {
-                if (btn === 'link') {
+                if (btn === 'https://shahnameh-ton.w3spaces.com/presale/presale.html') {
                     Telegram.WebApp.openLink('https://shahnameh-ton.w3spaces.com/presale/presale.html');
                 }
             });
