--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 
 <body>
     <main>
+	<div id="root"></div>
         <div align="center">
             <a href="https://shahnameh-ton.w3spaces.com/presale/presale.html/"><img width="48" src="./assets/tapps.png" alt="logo of telegram web apps"></a>
         </div>
@@ -119,7 +120,7 @@
                     {type: 'cancel'},
                 ]
             }, function(btn) {
-                if (btn === 'https://shahnameh-ton.w3spaces.com/presale/presale.html') {
+                if (btn === 'link') {
                     Telegram.WebApp.openLink('https://shahnameh-ton.w3spaces.com/presale/presale.html');
                 }
             });
